api endpoint to retrive the scaling decision is updated
